// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainNav /> should print warnings when missing history.push and firebase.logout props 1`] = `
"Warning: Failed prop type: The prop \`history.push\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav
    in withStyles(MainNav)"
`;

exports[`<MainNav /> should print warnings when missing history.push and firebase.logout props 2`] = `
"Warning: Failed prop type: The prop \`firebase.logout\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav
    in withStyles(MainNav)"
`;

exports[`<MainNav /> should throw when missing props.auth and warn for missing props 1`] = `
"Warning: Failed prop type: The prop \`auth\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav
    in withStyles(MainNav)"
`;

exports[`<MainNav /> should throw when missing props.auth and warn for missing props 2`] = `
"Warning: Failed prop type: The prop \`match\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav
    in withStyles(MainNav)"
`;

exports[`<MainNav /> should throw when missing props.auth and warn for missing props 3`] = `
"Warning: Failed prop type: The prop \`history\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav
    in withStyles(MainNav)"
`;

exports[`<MainNav /> should throw when missing props.auth and warn for missing props 4`] = `
"Warning: Failed prop type: The prop \`firebase\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav
    in withStyles(MainNav)"
`;
